syntax = "proto3";

package auth;

option go_package = "./auth";

service AuthService {
  rpc GenerateToken(GenerateTokenRequest) returns (GenerateTokenResponse);
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message RefreshTokenRequest{
  string refreshtoken = 1;
}
message RefreshTokenResponse{
  string token = 1;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
}

message GenerateTokenRequest{
  int64 id = 1;
  string role = 2;
  string username = 3;
}

message GenerateTokenResponse{
  string token = 1;
  string refresh_token = 2;
}