syntax = "proto3";

package logging;

option go_package = "./";

service LoggingService {
  rpc GetLogs(GetLogsRequest) returns (GetLogsResponse);
  rpc CreateLog(CreateLogRequest) returns (Log);
  rpc DeleteLog(DeleteLogRequest) returns (DeleteLogResponse);
}

message Log {
  string id = 1;
  string service = 2;
  string level = 3;
  string message = 4;
  string timestamp = 5;
}

message GetLogsRequest {
  string service = 1;
  string level = 2;
}

message GetLogsResponse {
  repeated Log logs = 1;
}

message CreateLogRequest{
  string service = 1;
  string level = 2;
  string message = 3;
  string timestamp = 4;
}

message DeleteLogRequest{
  string id = 1;
}

message DeleteLogResponse{
  bool Success = 1;
}